--- a/.env.example
+++ b/.env.example
@@ -104,3 +104,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# YANDEX GEOCODER
+YANDEX_GEOCODER_TOKEN=6da97c75-9c99-4d3e-aa92-c1ccd50f312d
