--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -45,7 +45,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_pass laravel-kit-php:9000;
+        fastcgi_pass gecode-test-php:9000;
         #fastcgi_pass unix:/var/run/php5-fpm.sock;
         # try_files $uri =404;
     }
