change env example and readme

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Docker
 # ------
-DOCKER_DOMAIN=laravel-kit.localhost
-ADMIN_DOMAIN=backend.laravel-kit.localhost
+DOCKER_DOMAIN=gecode-test.localhost
+ADMIN_DOMAIN=backend.gecode-test.localhost
 SANCTUM_STATEFUL_DOMAINS=${DOCKER_DOMAIN}
-PROJECT_NAME=laravel-kit
+PROJECT_NAME=gecode-test
 FORCE_HTTPS=false
 
 PHP_USER_ID=1000
