--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
 
   db:
     container_name: ${PROJECT_NAME}-db
-    image: postgres:17.0-alpine3.20
+    image: postgis/postgis:17-3.5
     environment:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
